tests/macros/confirm/plugin.stderr
error: option `plugin` does not exist for kind `confirm`
 --> $DIR/plugin.rs:2:45
  |
2 |     let q = discourse::questions![Confirm { plugin: todo!() }];
  |                                             ^^^^^^
