tests/macros/confirm/plugin.rs
fn main() {
    let q = discourse::questions![Confirm { plugin: todo!() }];
}
